# toolkit

./: .gitignore  CHANGLOG.md  LICENSE  README.md
Renamer/: renamer_gui.py
TreeDrawer/: tree_generator.py
apps/Renamer/: renamer.py
apps/TreeDrawer/: README.md  main.py  tree_gui.py
libs/region_calculator/: window_locator_win32.py
libs/window_finder/: CHANGELOG.md  README.md  pyproject.toml
libs/window_finder/examples/: find_first.py
libs/window_finder/src/window_finder/: errors.py  models.py
libs/window_finder/src/window_finder/backends/: win32.py
region_calculator/: RegionCalculator.py  __init__.py  interfaces.py  region_calculator.py  region_mapper.py
window_finder/: README.md
window_finder/examples/: find_first.py
window_finder/src/window_finder/: __init__.py  factory.py  models.py  protocol.py
window_finder/src/window_finder/backends/: win32.py
