[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "window-finder"
version = "0.1.0"
description = "Cross-platform window discovery interface with Win32 backend (macOS/Linux backends TBD)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Zhang Xiang"}]
keywords = ["windows", "automation", "window", "win32"]

# 依赖：你的 win32 后端用到了这些
dependencies = [
  "pywin32>=306"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
